style: fixing positions and alignment

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,6 +1,8 @@
 .search {
   padding: 10px;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .searched-city {
